language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_for_variants_with_mixed_fields.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n  Wobble(field: String, field1: Int)\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
  Wobble(field: String, field1: Int)
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
  Wobble(field: String, field1: Int)
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  case wibble {
    Wibble -> json.object([
      #("type", json.string("wibble")),
    ])
    Wobble(field:, field1:) -> json.object([
      #("type", json.string("wobble")),
      #("field", json.string(field)),
      #("field1", json.int(field1)),
    ])
  }
}
