language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_list_of_tuples.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(values: List(#(Int, String)))\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble(values: List(#(Int, String)))
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble(values: List(#(Int, String)))
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  let Wibble(values:) = wibble
  json.object([
    #("values", json.array(values, fn(value) {
      json.preprocessed_array([
        json.int(value.0),
        json.string(value.1),
      ])
    })),
  ])
}
