language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_recursive_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/option.{Some}\n\npub type LinkedList {\n  LinkedList(value: Int, next: option.Option(LinkedList))\n}\n"
---
----- BEFORE ACTION

import gleam/option.{Some}

pub type LinkedList {
    ↑                
  LinkedList(value: Int, next: option.Option(LinkedList))
}


----- AFTER ACTION

import gleam/json
import gleam/option.{Some}

pub type LinkedList {
  LinkedList(value: Int, next: option.Option(LinkedList))
}

fn linked_list_to_json(linked_list: LinkedList) -> json.Json {
  let LinkedList(value:, next:) = linked_list
  json.object([
    #("value", json.int(value)),
    #("next", case next {
      option.None -> json.null()
      Some(value) -> linked_list_to_json(value)
    }),
  ])
}
