language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(tuple: #(Int, Float, #(String, Bool)))\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble(tuple: #(Int, Float, #(String, Bool)))
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble(tuple: #(Int, Float, #(String, Bool)))
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  let Wibble(tuple:) = wibble
  json.object([
    #("tuple", json.preprocessed_array([
      json.int(tuple.0),
      json.float(tuple.1),
      json.preprocessed_array([
        json.string(tuple.2.0),
        json.bool(tuple.2.1),
      ]),
    ])),
  ])
}
