language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_qualified_variant_in_other_module.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport other\n\npub fn main() -> other.Wibble {\n  let assert other.Wobble = new()\n}\n\npub fn new() -> other.Wibble { todo }\n"
---
----- BEFORE ACTION

import other

pub fn main() -> other.Wibble {
  let assert other.Wobble = new()
                   ↑             
}

pub fn new() -> other.Wibble { todo }


----- AFTER ACTION
// --- Edits applied to module 'other'
pub type Wibble {
  Wobble
}
