language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_qualified_variant_in_other_module_with_exisiting_variant.snap
---
source: language-server/src/tests/action.rs
expression: "import woo\n\npub fn wibble() -> woo.Wibble {\n  woo.Wobble(0)\n}"
---
----- BEFORE ACTION
import woo

pub fn wibble() -> woo.Wibble {
  woo.Wobble(0)
      ↑        
}


----- AFTER ACTION
// --- Edits applied to module 'woo'
pub type Wibble {
  Wibble
  Wobble(Int)
}
