language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_type_generates_non_colliding_parameter_names.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(argument: Wibble(b, Int)) { todo }\n"
---
----- BEFORE ACTION

pub fn wibble(argument: Wibble(b, Int)) { todo }
                        ↑                       


----- AFTER ACTION

pub type Wibble(b, a)

pub fn wibble(argument: Wibble(b, Int)) { todo }
