language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_type_works_for_unknown_type_in_argument_annotation.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(argument: Wibble(some, generics)) { todo }\n"
---
----- BEFORE ACTION

pub fn wibble(argument: Wibble(some, generics)) { todo }
                        ↑                               


----- AFTER ACTION

pub type Wibble(some, generics)

pub fn wibble(argument: Wibble(some, generics)) { todo }
