language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_type_works_for_unknown_type_in_private_function.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(argument: Wobble) { todo }\n"
---
----- BEFORE ACTION

fn wibble(argument: Wobble) { todo }
                    ↑               


----- AFTER ACTION

type Wobble

fn wibble(argument: Wobble) { todo }
