language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_type_works_for_unknown_type_with_parameters.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wibble(Wobble(Int, String))\n}\n"
snapshot_kind: text
---
----- BEFORE ACTION

type Wibble {
  Wibble(Wobble(Int, String))
         ↑                   
}


----- AFTER ACTION

type Wibble {
  Wibble(Wobble(Int, String))
}
type Wobble(a, b)
